--- a/test/flutter/Dockerfile.arm64
+++ b/test/flutter/Dockerfile.arm64
@@ -25,7 +25,7 @@ RUN install-tool git v2.42.0
 #--------------------------------------
 FROM base as test-flutter
 
-# renovate datasource=flutter-version
+# renovate: datasource=flutter-version
 RUN install-tool flutter 3.0.2
 
 #--------------------------------------
