--- a/test/Dockerfile.jammy
+++ b/test/Dockerfile.jammy
@@ -32,7 +32,7 @@ FROM build as test
 # renovate: datasource=npm
 RUN install-tool bun 1.0.3
 
-# renovate datasource=docker
+# renovate: datasource=docker
 RUN install-tool dart 2.18.0
 
 # renovate: datasource=github-releases packageName=moby/moby
@@ -41,7 +41,7 @@ RUN install-tool docker v24.0.6
 # renovate: datasource=dotnet packageName=dotnet-sdk
 RUN install-tool dotnet 7.0.401
 
-# renovate datasource=flutter-version
+# renovate: datasource=flutter-version
 RUN install-tool flutter 3.0.2
 
 # renovate: datasource=github-releases packageName=fluxcd/flux2
