--- a/test/dart/Dockerfile.arm64
+++ b/test/dart/Dockerfile.arm64
@@ -21,7 +21,7 @@ RUN install-containerbase
 #--------------------------------------
 FROM base as test-dart
 
-# renovate datasource=docker
+# renovate: datasource=docker
 RUN install-tool dart 2.18.0
 
 #--------------------------------------
