--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,8 @@ jobs:
       checks: write
     steps:
       - uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4.1.0
+        with:
+          show-progress: false
 
       - name: 📥 Setup Node.js
         uses: ./.github/actions/setup-node
@@ -45,6 +47,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4.1.0
+        with:
+          show-progress: false
 
       - name: 📥 Setup Node.js
         uses: ./.github/actions/setup-node
@@ -75,6 +79,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4.1.0
+        with:
+          show-progress: false
 
       - name: Install ubuntu dependencies
         run: |
@@ -99,6 +105,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4.1.0
+        with:
+          show-progress: false
 
       - name: 📥 Setup Node.js
         uses: ./.github/actions/setup-node
@@ -118,6 +126,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4.1.0
+        with:
+          show-progress: false
 
       - name: init
         run: |
@@ -156,6 +166,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4.1.0
+        with:
+          show-progress: false
 
       - name: init
         run: |
@@ -216,6 +228,8 @@ jobs:
           command: docker-config
 
       - uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4.1.0
+        with:
+          show-progress: false
 
       - name: init
         run: |
