--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
       "~test/*": ["./test/*"]
     }
   },
-  "exclude": ["node_modules", "bin", "dist", "coverage"]
+  "exclude": ["node_modules", "bin", "dist", "coverage", "html"]
 }
