test(python): use python v3.11 for old poetry

--- a/test/python/Dockerfile
+++ b/test/python/Dockerfile
@@ -118,7 +118,10 @@ RUN set -ex; cd d-poetry && poetry update --lock --no-interaction pytest
 #--------------------------------------
 # test poetry-d: poetry (old versions)
 #--------------------------------------
-FROM build as test-poetry-d
+FROM base as test-poetry-d
+
+# python 3.12+ not supported
+RUN install-tool python 3.11.6
 
 RUN install-tool poetry 0.12.17
 RUN install-tool poetry 1.1.15
