--- a/test/latest/Dockerfile.arm64
+++ b/test/latest/Dockerfile.arm64
@@ -17,6 +17,15 @@ COPY src/ /
 RUN install-containerbase
 
 #--------------------------------------
+# Image: bazelisk
+#--------------------------------------
+FROM base as test-bazelisk
+
+
+# renovate: datasource=github-tags packageName=bazelbuild/bazelisk
+RUN install-tool bazelisk v1.18.0
+
+#--------------------------------------
 # Image: bun
 #--------------------------------------
 FROM base as test-bun
@@ -85,6 +94,7 @@ RUN install-tool vendir v0.37.0
 #--------------------------------------
 FROM base
 
+COPY --from=test-bazelisk /.dummy /.dummy
 COPY --from=test-bun /.dummy /.dummy
 COPY --from=test-docker /.dummy /.dummy
 COPY --from=test-git /.dummy /.dummy
