--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -74,10 +74,10 @@ jobs:
           echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
 
       - name: prepare apt proxy
-        run: sudo yarn prepare:proxy
+        run: sudo pnpm prepare:proxy
 
       - name: semantic-release
         if: github.event_name == 'push'
-        run: yarn semantic-release --dry-run ${{env.DRY_RUN}} --ci ${{env.DRY_RUN != 'true'}}
+        run: pnpm semantic-release --dry-run ${{env.DRY_RUN}} --ci ${{env.DRY_RUN != 'true'}}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
