--- a/.releaserc.json
+++ b/.releaserc.json
@@ -22,8 +22,8 @@
     [
       "@semantic-release/exec",
       {
-        "prepareCmd": "run-s \"release:prepare {@}\" -- --release=${nextRelease.version} --sha=${nextRelease.gitHead}",
-        "publishCmd": "run-s \"release:publish {@}\" -- --release=${nextRelease.version} --sha=${nextRelease.gitHead}"
+        "prepareCmd": "pnpm release:prepare --release=${nextRelease.version} --sha=${nextRelease.gitHead}",
+        "publishCmd": "pnpm release:publish --release=${nextRelease.version} --sha=${nextRelease.gitHead}"
       }
     ]
   ],
