--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   "type": "module",
   "engines": {
     "node": ">=18.12.0",
-    "yarn": "^3.2.0"
+    "pnpm": "^8.0.0"
   },
   "scripts": {
-    "bats": "node --experimental-import-meta-resolve tools/bats.js --timing --verbose-run",
+    "bats": "node tools/bats.js --timing --verbose-run",
     "build": "run-s 'build:*'",
     "build:cli": "node tools/esbuild.js",
     "eslint": "eslint --cache --report-unused-disable-directives .",
@@ -22,7 +22,7 @@
     "lint:types:dist": "tsc -p tsconfig.dist.json",
     "postinstall": "husky install",
     "prepare:proxy": "node tools/prepare-proxy.js",
-    "prettier": "prettier  --cache -c -u \"**/*.*\"",
+    "prettier": "prettier --cache -c -u \"**/*.*\"",
     "prettier-fix": "prettier --cache -w -u \"**/*.*\"",
     "release:prepare": "node tools/prepare-release.js",
     "release:publish": "node tools/publish-release.js",
@@ -62,7 +62,6 @@
     "@typescript-eslint/parser": "6.12.0",
     "@vitest/coverage-v8": "0.34.6",
     "@vitest/ui": "0.34.6",
-    "@yarnpkg/sdks": "3.1.0",
     "bats": "1.10.0",
     "bats-assert": "2.0.0",
     "bats-support": "0.3.0",
@@ -98,7 +97,6 @@
     "vitest-github-actions-reporter": "0.11.0"
   },
   "resolutions": {
-    "clipanion@3.2.1": "patch:clipanion@npm%3A3.2.1#./.yarn/patches/clipanion-npm-3.2.1-fc9187f56c.patch",
     "esbuild": "0.19.7",
     "tsconfig-paths": "4.2.0",
     "vite": "4.5.0"
@@ -106,16 +104,16 @@
   "contributors": [
     "Michael Kriese <michael.kriese@visualon.de>"
   ],
-  "dependenciesMeta": {
-    "bats@1.10.0": {
-      "unplugged": true
-    },
-    "bats-assert@2.0.0": {
-      "unplugged": true
-    },
-    "bats-support@0.3.0": {
-      "unplugged": true
+  "packageManager": "pnpm@8.10.5",
+  "pnpm": {
+    "supportedArchitectures": {
+      "os": [
+        "linux",
+        "win32"
+      ],
+      "cpu": [
+        "x64"
+      ]
     }
-  },
-  "packageManager": "yarn@3.7.0"
+  }
 }
