--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "containerbase",
   "version": "0.0.0-semantic-release",
   "private": true,
-  "license": "MIT",
   "repository": "https://github.com/containerbase/base.git",
+  "license": "MIT",
   "author": "Rhys Arkins <rhys@arkins.net>",
+  "contributors": [
+    "Michael Kriese <michael.kriese@visualon.de>"
+  ],
   "type": "module",
-  "engines": {
-    "node": ">=18.12.0",
-    "pnpm": "^8.0.0"
-  },
   "scripts": {
     "bats": "node tools/bats.js --timing --verbose-run",
     "build": "run-s 'build:*'",
@@ -85,7 +84,7 @@
     "npm-run-all": "4.1.5",
     "pkg": "5.8.1",
     "prettier": "2.8.8",
-    "prettier-plugin-package": "1.3.1",
+    "prettier-plugin-packagejson": "2.4.6",
     "semantic-release": "22.0.8",
     "shelljs": "0.8.5",
     "tsx": "3.14.0",
@@ -96,16 +95,17 @@
     "vitest": "0.34.6",
     "vitest-github-actions-reporter": "0.11.0"
   },
-  "resolutions": {
-    "esbuild": "0.19.7",
-    "tsconfig-paths": "4.2.0",
-    "vite": "4.5.0"
-  },
-  "contributors": [
-    "Michael Kriese <michael.kriese@visualon.de>"
-  ],
   "packageManager": "pnpm@8.10.5",
+  "engines": {
+    "node": ">=18.12.0",
+    "pnpm": "^8.0.0"
+  },
   "pnpm": {
+    "overrides": {
+      "esbuild": "0.19.7",
+      "tsconfig-paths": "4.2.0",
+      "vite": "4.5.0"
+    },
     "supportedArchitectures": {
       "os": [
         "linux",
