build: drop node v19 support

--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
   },
   "packageManager": "pnpm@8.10.5",
   "engines": {
-    "node": ">=18.12.0",
+    "node": "^18.12.0 || >=20.9.0",
     "pnpm": "^8.0.0"
   },
   "pnpm": {
