--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@typescript-eslint/parser": "6.12.0",
     "@vitest/coverage-v8": "0.34.6",
     "@vitest/ui": "0.34.6",
+    "@yao-pkg/pkg": "5.10.0",
     "bats": "1.10.0",
     "bats-assert": "2.0.0",
     "bats-support": "0.3.0",
@@ -82,7 +83,6 @@
     "lint-staged": "15.1.0",
     "nock": "13.3.8",
     "npm-run-all": "4.1.5",
-    "pkg": "5.8.1",
     "prettier": "3.1.0",
     "prettier-plugin-packagejson": "2.4.6",
     "semantic-release": "22.0.8",
