Apply suggestions from code review

--- a/test/Dockerfile.jammy
+++ b/test/Dockerfile.jammy
@@ -29,7 +29,7 @@ RUN prepare-tool all
 #--------------------------------------
 FROM build as test
 
-# renovate: datasource=github-tags packageName=bazelbuild/bazelisk
+# renovate: datasource=github-releases packageName=bazelbuild/bazelisk
 RUN install-tool bazelisk v1.18.0
 
 # renovate: datasource=npm
