chore: update and test devcontainer

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,8 +1,1 @@
-FROM ghcr.io/containerbase/node:20.10.0
-
-# renovate: datasource=npm
-RUN install-tool corepack 0.23.0
-
-USER root
-RUN install-apt shellcheck
-USER 1000
+FROM ghcr.io/containerbase/devcontainer:9.26.0
