chore(renovate): automerge test deps

--- a/renovate.json
+++ b/renovate.json
@@ -52,13 +52,16 @@
       "description": "Don't separate minor and patch updates in tests",
       "matchPaths": ["test/**"],
       "matchPackageNames": [
+        "bazelisk",
         "bundler",
+        "corepack",
         "docker",
         "dotnet",
         "git",
         "kustomize",
         "helm",
         "helmfile",
+        "node",
         "npm",
         "pdm",
         "pipenv",
@@ -75,13 +78,16 @@
       "description": "Automerge test selected minor updates in tests",
       "matchPaths": ["test/**"],
       "matchPackageNames": [
+        "bazelisk",
         "bundler",
+        "corepack",
         "docker",
         "dotnet",
         "git",
         "kustomize",
         "helm",
         "helmfile",
+        "node",
         "npm",
         "pdm",
         "pipenv",
