chore(renovate): automerge gradle

--- a/renovate.json
+++ b/renovate.json
@@ -58,6 +58,7 @@
         "docker",
         "dotnet",
         "git",
+        "gradle",
         "kustomize",
         "helm",
         "helmfile",
@@ -84,6 +85,7 @@
         "docker",
         "dotnet",
         "git",
+        "gradle",
         "kustomize",
         "helm",
         "helmfile",
