--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@sindresorhus/is": "6.1.0",
     "clipanion": "3.2.1",
+    "deepmerge": "4.3.1",
     "del": "7.1.0",
     "execa": "8.0.1",
     "global-agent": "3.0.0",
