--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   },
   "devDependencies": {
     "@semantic-release/exec": "6.0.3",
-    "@tsconfig/node18": "18.2.2",
+    "@tsconfig/node20": "20.1.2",
     "@tsconfig/strictest": "2.0.2",
     "@types/global-agent": "2.1.3",
     "@types/node": "18.18.13",
@@ -98,7 +98,7 @@
   },
   "packageManager": "pnpm@8.11.0",
   "engines": {
-    "node": "^18.12.0 || >=20.9.0",
+    "node": ">=20.9.0",
     "pnpm": "^8.0.0"
   },
   "pnpm": {
