--- a/package.json
+++ b/package.json
@@ -31,6 +31,12 @@
     "test:docker": "node tools/test.js",
     "test:vitest": "vitest run --coverage"
   },
+  "resolutions": {
+    "bats-support": "0.3.0",
+    "esbuild": "0.19.8",
+    "tsconfig-paths": "4.2.0",
+    "vite": "4.5.1"
+  },
   "dependencies": {
     "@sindresorhus/is": "6.1.0",
     "clipanion": "3.2.1",
@@ -102,12 +108,6 @@
     "pnpm": "^8.0.0"
   },
   "pnpm": {
-    "overrides": {
-      "bats-support": "0.3.0",
-      "esbuild": "0.19.8",
-      "tsconfig-paths": "4.2.0",
-      "vite": "4.5.1"
-    },
     "patchedDependencies": {
       "clipanion@3.2.1": "patches/clipanion@3.2.1.patch"
     },
