fix: install, code-review tidy

--- a/test/gleam/Dockerfile
+++ b/test/gleam/Dockerfile
@@ -14,47 +14,18 @@ SHELL ["/bin/bash" , "-c"]
 COPY src/ /
 
 RUN install-containerbase
-
-COPY --chown=1000:0 test/gleam/test test
-WORKDIR /test
-
-RUN prepare-tool gleam
-
-#--------------------------------------
-# build
-#--------------------------------------
-FROM base as build
-
-# renovate: datasource=docker versioning=docker
 RUN install-tool gleam 0.34.1
-
-# renovate: datasource=docker versioning=docker
-RUN install-tool gleam 0.34.1
-
 
 USER 1000
 
 #--------------------------------------
 # test a: root
 #--------------------------------------
-FROM build as testa
-
-
-SHELL [ "/bin/sh", "-c" ]
-RUN gleam --version
-
-#--------------------------------------
-# test b: non-root
-#--------------------------------------
-FROM base as testb
-
-USER 1000
-
-# renovate: datasource=docker versioning=docker
-RUN install-tool gleam 0.34.1
+FROM base as testa
 
 SHELL [ "/bin/sh", "-c" ]
 RUN gleam --version
+
 
 #--------------------------------------
 # final
@@ -62,4 +33,3 @@ RUN gleam --version
 FROM base
 
 COPY --from=testa /.dummy /.dummy
-COPY --from=testb /.dummy /.dummy
