--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,16 @@ jobs:
         with:
           save-cache: true
 
+      - name: build
+        run: pnpm build
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: build
+          path: ./src/usr/local/containerbase/bin/containerbase-cli-*
+          if-no-files-found: error
+          retention-days: 1
+
   lint:
     runs-on: ubuntu-latest
     needs: setup
@@ -86,8 +96,10 @@ jobs:
       - name: 📥 Setup Node.js
         uses: ./.github/actions/setup-node
 
-      - name: build
-        run: pnpm build
+      - uses: actions/download-artifact@v4
+        with:
+          name: build
+          path: ./src/usr/local/containerbase/bin/
 
       - name: bats
         run: pnpm test:bats
@@ -131,8 +143,10 @@ jobs:
       - name: prepare apt proxy
         run: sudo pnpm prepare:proxy
 
-      - name: build
-        run: pnpm build
+      - uses: actions/download-artifact@v4
+        with:
+          name: build
+          path: ./src/usr/local/containerbase/bin/
 
       - name: test distro
         run: docker buildx bake
@@ -169,14 +183,17 @@ jobs:
       - name: prepare apt proxy
         run: sudo pnpm prepare:proxy
 
-      - name: build
-        run: pnpm build
+      - uses: actions/download-artifact@v4
+        with:
+          name: build
+          path: ./src/usr/local/containerbase/bin/
 
       - name: test distro
         run: docker buildx bake test-distro
 
   lang:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    name: ${{ matrix.tag }} (${{ runner.arch }})
     needs:
       - base
       - bats
@@ -205,6 +222,9 @@ jobs:
           - rust
           - swift
           - latest
+        os:
+          - ubuntu-latest
+          - macos-14 # https://github.blog/changelog/2024-01-30-github-actions-introducing-the-new-m1-macos-runner-available-to-open-source/
 
     env:
       TAG: ${{ matrix.tag }}
@@ -229,10 +249,12 @@ jobs:
       - name: prepare apt proxy
         run: sudo pnpm prepare:proxy
 
-      - name: build
-        run: pnpm build
+      - uses: actions/download-artifact@v4
+        with:
+          name: build
+          path: ./src/usr/local/containerbase/bin/
 
       - name: test
-        run: docker buildx bake test
+        run: docker buildx bake test-${{ runner.arch }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
