--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,10 @@ jobs:
 
           colima list
 
-      - run: colima --verbose start
+      - run: colima start --verbose --very-verbose
+
+      - run: cat /Users/admin/.colima/_lima/colima/serial.log
+        if: always()
 
   setup:
     runs-on: ubuntu-latest
