--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,12 @@ jobs:
 
       - run: colima start --verbose --very-verbose
 
+      - run: ls -la /Users/runner/.colima/_lima/colima/*.log
+        if: always()
+
       - run: cat /Users/runner/.colima/_lima/colima/serial.log
+        if: always()
+      - run: cat /Users/runner/.colima/_lima/colima/ha.stderr.log
         if: always()
 
   setup:
