--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
 
       - run: colima version && limactl --version && qemu-img --version
 
-      - run: colima start --verbose --very-verbose
+      - run: colima start --verbose --very-verbose -t vz
 
       - run: ls -la /Users/runner/.colima/_lima/colima/*.log
         if: always()
