--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ permissions:
 
 jobs:
   test-mac:
-    runs-on: macos-14
+    runs-on: ${{ matrix.os }}
 
     strategy:
       matrix:
@@ -31,7 +31,7 @@ jobs:
           - macos-14
 
     steps:
-      - name: install docker
+      - name: install docker on ${{ runner.arch}}
         run: |
           # macos-14 is missing colima
           brew install colima docker
